# ITMOGamedev2022_Algos_Lab3_QuickSort

./: CMakeLists.txt  QuickSort.h  main.cpp  testplot.py
GoogleTests/: CMakeLists.txt  Lab3QuickSortTests.cpp
